# NPP_ExportPlugin

./: CMakeLists.txt
src/: NPP_ExportPlugin.mm
